# timestamps-from-URL

./: .gitignore  MELHORIAS_TIMESTAMPS.md  README.md  TROUBLESHOOTING.md  main.py  requirements.txt  run-gpu.ps1  run.bat  run.ps1  setup-cuda.ps1  test-video.ps1  test_deepseek.py  test_deepseek_chunks.py  test_simple.py  test_timestamps.py
backend/: .env.example  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/local-whisper/: server.py
backend/src/: ai-response-validator.ts  audio-chunker.ts  audio-ytdlp.ts  audio.ts  cache.ts  errors.ts  index-local.ts  index.ts  local-llm.ts  local-whisper.ts  openai.ts  time-utils.ts  types.ts  validation-config.ts  validator.ts  whisper.ts  youtube-local.ts  youtube.ts
docs/: architecture.md  timestamps.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorDisplay.tsx  LoadingState.tsx  TimestampList.tsx  VideoInput.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: __init__.py  downloader.py  exporter.py  smart_timestamp_generator.py  timestamp_analyzer.py  timestamp_generator.py  transcriber.py
